themes/carolkappus/assets/sass/main.sass
body
  margin-top: 60px
  background: url(../subtle-grunge.png)
  
.jumbotron 
  margin-top: 20px
  color: white
  background: #191b17 url("../img/header3.png") top right no-repeat
  h1
    border: none
    font-size: 5rem
    
h1, h2, h3
  margin-top: 2rem
  margin-bottom: 1rem
  padding-bottom: 0.25rem
  border-bottom: 1px solid #ccc
  line-height: 40px

p.lead
  font-size: 1.5rem

p
  font-size: 1.2rem
  line-height: 1.6
  margin-bottom: 2rem
  
@import url('https://fonts.googleapis.com/css?family=IM+Fell+English|Courgette|Quando|Volkhov|Marck+Script|Oleo+Script|Donegal+One')
h1, h2, h3, h4, h5, h6
  font-family: "IM Fell English", serif
  font-weight: 400

nav
  font-family: "IM Fell English", serif
  background: #331100 url(../img/tartan3.png) !important
  .nav-link
    font-size: 1.25rem
  .navbar-brand
    font-size: 1.5rem
    
.footer
  background: #333
  color: #ccc
  display: block
  width: 100%
  height: 5rem
  padding-top: 1.8rem
  margin-top: 1rem


.quote
  font-family: 'Courgette', cursive
  
.harps img
  width: 100%
  margin-bottom: 1rem

.music .col-md-3
  height: 600px
  display: block

ol.song 
  margin-top: 2rem
  li
    font-size: 1.2rem
    margin-bottom: 0.5rem

.sidebar img
  margin-top: 1rem
  width: 100%
  
.row.event 
  padding: 1rem
  i
    display: inline-block
  b
    font-size: 1.2rem
  p.blurb
    display: inline-block
    margin-bottom: 0.2rem
  .title
    border-bottom: 1px solid #ccc
    margin-bottom: 0.5rem
    padding-bottom: 0.5rem
    font-weight: bold
    font-size: 1.1rem
  small
    color: #333
  .venue
    margin-top: 0.5rem
    i
      margin-top: 0.25rem
      color: #555
      font-size: 0.8rem
      
.showheader
  height: 180px
  margin-bottom: 1em
  -webkit-background-size: cover
  -moz-background-size: cover
  -o-background-size: cover
  background-size: cover
  background-position: center
  background-repeat: no-repeat
  
.burns 
  background-image: url("/performances/rburns2.jpg") 

.ireland 
  background: url("/performances/shamrocks.jpg")

.scotland 
  background: url("/performances/scotland-flag.jpg")

.shop 
  h1
    margin-top: 0
  h4
    font-size: 1.4rem
  .title
    padding-top: 1rem
    display: inline-block
    a
      color: black
  form
    display: block
    text-align: center
    input[type="image"]
      margin: 20px auto 0 auto
  .card
    margin-bottom: 1rem
    padding-bottom: 1rem
    h3
      font-size: 3rem
      border: none
      margin-bottom: 0.5rem
  .cover
    -webkit-box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.75)
    -moz-box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.75)
    box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.75)
    margin-bottom: 2rem
  a .cover:hover
    -webkit-box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.75)
    -moz-box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.75)
    box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.75)
    margin-bottom: 2rem

